--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
-.html, .body{
-    padding: 0;
-    margin: 0;
-}
-.navbar{
- background-color: #7A9CC7;
- height: 5em;
+
+html{
+  margin-left: 12em ;
+  margin-right: 12em ;
 }
 
+.navbar{
+ background-color: #7A9CC7;
+ height: 4rem !important;
+}
 .color-nav{
 color: white !important;
 }
-
 .nav-item{
     color: white ;
 }
@@ -18,23 +18,26 @@ color: white !important;
     width: 10vw;
 }
 
+.news{
+  margin-top: 5em;
+}
 
-
-
-
+.social{
+  width:40px;
+  height:40px;
+  margin-top:-10px;
+}
   .footer-clean {
     padding:50px 0;
     background-color:#fff;
     color:#4b4c4d;
   }
-  
   .footer-clean h3 {
     margin-top:0;
     margin-bottom:12px;
     font-weight:bold;
     font-size:16px;
   }
-  
   .footer-clean ul {
     padding:0;
     list-style:none;
@@ -42,34 +45,28 @@ color: white !important;
     font-size:14px;
     margin-bottom:0;
   }
-  
   .footer-clean ul a {
     color:inherit;
     text-decoration:none;
     opacity:0.8;
   }
-  
   .footer-clean ul a:hover {
     opacity:1;
   }
-  
   .footer-clean .item.social {
     text-align:right;
   }
-  
   @media (max-width:767px) {
     .footer-clean .item {
       text-align:center;
       padding-bottom:20px;
     }
   }
-  
   @media (max-width: 768px) {
     .footer-clean .item.social {
       text-align:center;
     }
   }
-  
   .footer-clean .item.social > a {
     font-size:24px;
     width:40px;
@@ -84,23 +81,19 @@ color: white !important;
     color:inherit;
     opacity:0.75;
   }
-  
   .footer-clean .item.social > a:hover {
     opacity:0.9;
   }
-  
   @media (max-width:991px) {
     .footer-clean .item.social > a {
       margin-top:40px;
     }
   }
-  
   @media (max-width:767px) {
     .footer-clean .item.social > a {
       margin-top:10px;
     }
   }
-  
   .footer-clean .copyright {
     margin-top:14px;
     margin-bottom:0;
