--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 
 html{
-  margin-left: 12em ;
-  margin-right: 12em ;
+  margin-left: 13em ;
+  margin-right: 13em ;
 }
 
+
 .navbar{
- background-color: #7A9CC7;
+ background-color: #8673CC;
  height: 4rem !important;
 }
 .color-nav{
@@ -14,9 +15,20 @@ color: white !important;
 .nav-item{
     color: white ;
 }
-.logo {
-    width: 10vw;
+
+.container-fluid{
+height: 3em;
+padding-left: 13em !important;
+padding-right: 13em !important;
 }
+.nav-link{
+height: 100%;
+}
+.logo {
+    height: 100%;
+    width: 100%;
+}
+
 
 .news{
   margin-top: 5em;
