--- a/css/stylepage5.css
+++ b/css/stylepage5.css
@@ -1,152 +1,156 @@
 
 html{
-    margin-left: 15em ;
-    margin-right: 15em ;
-  }
-  .navbar{
-   background-color: #8673CC;
-   height: 4rem !important;
-  }
-  .color-nav{
-  color: white !important;
-  }
-  .nav-item{
-      color: white ;
-  }
-  .container-fluid{
-  height: 3em;
-  padding-left: 15em !important;
-  padding-right: 15em !important;
-  }
-  .nav-link{
-  height: 100%;
-  }
-  .logo {
-      height: 100%;
-      width: 100%;
-  }
+  margin-left: 15em ;
+  margin-right: 15em ;
+}
+.navbar{
+ background-color: #8673CC;
+ height: 4rem !important;
+}
+.color-nav{
+color: white !important;
+}
+.nav-item{
+    color: white ;
+}
+.container-fluid{
+height: 3em;
+padding-left: 15em !important;
+padding-right: 15em !important;
+}
+.nav-link{
+height: 100%;
+}
+.logo {
+    height: 100%;
+    width: 100%;
+}
 
-  #gameplay{
-    margin-top: 5em;
-    display: flex;
-  }
-  .presentation{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2em;
-  }
-
-.image{
- width: 60%;
- height: 20em;
-}
-.container{
-  height: 100%;
-  width: 100;
-  overflow: hidden;
-}
-.zeldaimage{
-  height: 100%;
-  width: 100;
-}
-.article{
-  margin-top: 5em;
-}
-.video{
-  height: 25em;
+#gameplay{
   margin-top: 5em;
   display: flex;
+}
+.presentation{
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  overflow: hidden;
+  justify-content: center;
+  gap: 2em;
+}
+
+
+.container{
+height: 100%;
+width: 100em;
+overflow: hidden;
+}
+
+.presentation{
+width: 70%;
+}
+.zeldaimage{
+height: 100%;
+width: 100%;
+
+}
+.article{
+margin-top: 5em;
+}
+
+
+.video{
+height: 25em;
+margin-top: 5em;
+display: flex;
+align-items: center;
+justify-content: space-around;
+overflow: hidden;
 }
 
 .card-header{
-  color:#fff !important;
-  background-color:#8673CC !important;
+color:#fff !important;
+background-color:#8673CC !important;
 }
 
 .pagination{
-  margin-top: 6em;
+margin-top: 6em;
 }
-  .social{
+.social{
+  width:40px;
+  height:40px;
+  margin-top:-10px;
+}
+  .footer-clean {
+    padding:50px 0;
+    background-color:#fff;
+    color:#4b4c4d;
+  }
+  .footer-clean h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  .footer-clean ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  .footer-clean ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  .footer-clean ul a:hover {
+    opacity:1;
+  }
+  .footer-clean .item.social {
+    text-align:right;
+  }
+  @media (max-width:767px) {
+    .footer-clean .item {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  @media (max-width: 768px) {
+    .footer-clean .item.social {
+      text-align:center;
+    }
+  }
+  .footer-clean .item.social > a {
+    font-size:24px;
     width:40px;
     height:40px;
-    margin-top:-10px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin-left:10px;
+    margin-top:22px;
+    color:inherit;
+    opacity:0.75;
   }
-    .footer-clean {
-      padding:50px 0;
-      background-color:#fff;
-      color:#4b4c4d;
-    }
-    .footer-clean h3 {
-      margin-top:0;
-      margin-bottom:12px;
-      font-weight:bold;
-      font-size:16px;
-    }
-    .footer-clean ul {
-      padding:0;
-      list-style:none;
-      line-height:1.6;
-      font-size:14px;
-      margin-bottom:0;
-    }
-    .footer-clean ul a {
-      color:inherit;
-      text-decoration:none;
-      opacity:0.8;
-    }
-    .footer-clean ul a:hover {
-      opacity:1;
-    }
-    .footer-clean .item.social {
-      text-align:right;
-    }
-    @media (max-width:767px) {
-      .footer-clean .item {
-        text-align:center;
-        padding-bottom:20px;
-      }
-    }
-    @media (max-width: 768px) {
-      .footer-clean .item.social {
-        text-align:center;
-      }
-    }
+  .footer-clean .item.social > a:hover {
+    opacity:0.9;
+  }
+  @media (max-width:991px) {
     .footer-clean .item.social > a {
-      font-size:24px;
-      width:40px;
-      height:40px;
-      line-height:40px;
-      display:inline-block;
-      text-align:center;
-      border-radius:50%;
-      border:1px solid #ccc;
-      margin-left:10px;
-      margin-top:22px;
-      color:inherit;
-      opacity:0.75;
+      margin-top:40px;
     }
-    .footer-clean .item.social > a:hover {
-      opacity:0.9;
+  }
+  @media (max-width:767px) {
+    .footer-clean .item.social > a {
+      margin-top:10px;
     }
-    @media (max-width:991px) {
-      .footer-clean .item.social > a {
-        margin-top:40px;
-      }
-    }
-    @media (max-width:767px) {
-      .footer-clean .item.social > a {
-        margin-top:10px;
-      }
-    }
-    .footer-clean .copyright {
-      margin-top:14px;
-      margin-bottom:0;
-      font-size:13px;
-      opacity:0.6;
-    }
-    
+  }
+  .footer-clean .copyright {
+    margin-top:14px;
+    margin-bottom:0;
+    font-size:13px;
+    opacity:0.6;
+  }
+  
