--- a/css/stylepage7.css
+++ b/css/stylepage7.css
@@ -24,21 +24,20 @@ h3,h1{
   font-family: 'Unreal Engine', sans-serif;
 }
 
-.list-group{
-  list-style: none;
-}
 .maRow {
   padding-top: 5em;
   padding-bottom: 3em;
 }
-
+.list-group{
+  list-style: none;
+}
 .card-header {
   color: #fff !important;
   background-color: #8673CC !important;
 }
 
-.imageGow {
-background-image: url("../img/gow.jpg");
+.imageRe {
+background-image: url("../img/tloy.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -59,7 +58,7 @@ background-image: url("../img/gow.jpg");
     flex-direction: column;
   }
 
-  .imageZelda {
+  .imageRe {
     height: 100vh
   }
 }
