--- a/css/stylepage2.css
+++ b/css/stylepage2.css
@@ -24,6 +24,10 @@
     font-family: 'Unreal Engine', sans-serif;
   }
 
+.list-group{
+    list-style: none;
+  }
+
   .maRow {
     padding-top: 5em;
     padding-bottom: 3em;
