--- a/css/stylepage9.css
+++ b/css/stylepage9.css
@@ -37,7 +37,7 @@ h3,h1{
 }
 
 .imageRe {
-background-image: url("../img/gt.jpg");
+background-image: url("../img/gt.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
