--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,12 @@
+/*Body*/
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 /*navbar*/
 .navbar {
   background-color: #8673CC;
@@ -16,22 +25,38 @@
   width: 5em;
 }
 
-/*caroussel*/
-.caroussel {
-  margin-top: 4em;
+/*contact*/
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin-top: 6em;
 }
 
-/*Cards*/
-.card-img-bot {
-  height: 15em;
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-.card-img-top {
-  height: 40em;
+input[type=submit] {
+  background-color: #8673CC;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.news {
-  margin-top: 5em;
+input[type=submit]:hover {
+  background-color: #8673CC;
 }
 
 /*footer*/
@@ -125,4 +150,8 @@
   margin-bottom: 0;
   font-size: 13px;
   opacity: 0.6;
+}
+
+.foot {
+  background-color: #fff !important;
 }
