--- a/css/gt.css
+++ b/css/gt.css
@@ -1,3 +1,12 @@
+/*body*/
+body{
+  background-image: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+}
+
 /*navbar*/
 .navbar {
   background-color: #8673CC;
