--- a/css/log.css
+++ b/css/log.css
@@ -1,3 +1,12 @@
+/*body*/
+body{
+  background-image: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+}
+
 /*Body*/
 body {
   font-family: Arial, Helvetica, sans-serif;
