--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*body*/
+body{
+  background-image: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+}
 
 /*navbar*/
 .navbar {
